--- a/parallel-revolute.html
+++ b/parallel-revolute.html
@@ -21,7 +21,7 @@
       <a-assets>
         <a-entity
           id="robot"
-          src="./parallel-revolute1.glb"
+          src="https://baperezg.github.io/vrweb/parallel-revolute1.glb"
         ></a-entity>
       </a-assets>
       <a-entity
@@ -33,4 +33,5 @@
       ></a-entity>
     </a-scene>
   </body>
+
 </html>
