--- a/roboticcell.html
+++ b/roboticcell.html
@@ -21,7 +21,7 @@
       <a-assets>
         <a-entity
           id="celda"
-          src="./irb1410jointsCelda.glb"
+          src="https://baperezg.github.io/vrweb/irb1410jointsCelda.glb"
         ></a-entity>
       </a-assets>
       <a-entity
@@ -33,4 +33,5 @@
       ></a-entity>
     </a-scene>
   </body>
+
 </html>
